--- a/Components/App.razor
+++ b/Components/App.razor
@@ -1,11 +1,12 @@
 ﻿<!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="black">
 
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <base href="/" />
     <link rel="stylesheet" href="app.min.css" />
+    <link rel="stylesheet" href="animation.css" />
     <HeadOutlet />
 </head>
 
