Add Google auth, refactor DB context, and update utils

--- a/Components/Pages/Create.razor
+++ b/Components/Pages/Create.razor
@@ -1,6 +1,6 @@
 @page "/create"
 @using flashcard.model
-@using flashcard.services
+@using flashcard.utils
 @inject FlashCardService FlashCardService
 @rendermode InteractiveServer
 
