--- a/Components/Pages/Create.razor
+++ b/Components/Pages/Create.razor
@@ -4,6 +4,7 @@
 @inject FlashCardService FlashCardService
 @rendermode InteractiveServer
 
+<PageTitle>Create a Flashcard</PageTitle>
 <div class="flex flex-col py-10 max-w-xl mx-auto gap-3">
 	<div class="form-control w-full">
 		<div class="label">
