Merge: Auth to master (#2)
* Add Google auth, refactor DB context, and update utils

* Update environment variables for PostgreSQL configuration and refactor connection string handling

* feat(auth): finalize the google auth and adds integration to supabase

* Refactor and improve code readability

Reformatted code across multiple files for better readability.
Added null checks in Callback.razor.cs for safer account handling.
Marked NavigationManager injection as required in Login.razor.cs and Logout.razor.cs.
Moved logic from Profile.razor to new Profile.razor.cs.
Changed OnInitializedAsync to OnInitialized in Create.razor.cs.
Uncommented logging configuration in Program.cs.

--- a/Components/Pages/Create.razor
+++ b/Components/Pages/Create.razor
@@ -1,9 +1,10 @@
 @page "/create"
 @using flashcard.model
-@using flashcard.services
+@using flashcard.utils
 @inject FlashCardService FlashCardService
 @rendermode InteractiveServer
 
+<PageTitle>Create a Flashcard</PageTitle>
 <div class="flex flex-col py-10 max-w-xl mx-auto gap-3">
 	<div class="form-control w-full">
 		<div class="label">
