Add authentication state management to Create component
Introduce authentication state management in Create.razor and Create.razor.cs.
- Inject AuthenticationStateProvider in Create.razor.
- Remove HttpContext property from Create.razor.cs.
- Replace OnInitialized with OnInitializedAsync.
- Redirect unauthenticated users to the sign-in page.

--- a/Components/Pages/Create.razor
+++ b/Components/Pages/Create.razor
@@ -1,7 +1,9 @@
 @page "/create"
+@using Microsoft.AspNetCore.Components.Authorization
 @using flashcard.model
 @using flashcard.utils
 @inject FlashCardService FlashCardService
+@inject AuthenticationStateProvider AuthenticationStateProvider
 @rendermode InteractiveServer
 
 <PageTitle>Create a Flashcard</PageTitle>
