--- a/Components/Pages/Index.razor
+++ b/Components/Pages/Index.razor
@@ -4,6 +4,7 @@
 @using flashcard.Components.Components
 @using flashcard.Components.Icon
 @using System.Security.Claims
+@inject flashcard.utils.FlashCardService FlashCardService
 @inject Microsoft.AspNetCore.Components.Authorization.AuthenticationStateProvider AuthenticationStateProvider
 
 <PageTitle>Flashcard</PageTitle>
