--- a/Components/Components/FlashCardComponent.razor
+++ b/Components/Components/FlashCardComponent.razor
@@ -7,7 +7,8 @@
             </div>
             <p class="text-sm line-clamp-3">@flashCard?.Description</p>
         </div>
-        <div class="flex justify-end">
+        <div class="flex justify-between">
+            <p class="text-sm truncate">Author: @deckAuthor</p>
             <p class="text-sm truncate">@flashCard?.TotalQuestion Question</p>
         </div>
     </div>
