--- a/Components/Pages/Auth/Profile.razor
+++ b/Components/Pages/Auth/Profile.razor
@@ -2,6 +2,9 @@
 @using System.Security.Claims
 @using Microsoft.AspNetCore.Authentication
 @using Microsoft.AspNetCore.Authentication.Cookies
+@using flashcard.Components.Components
+@using flashcard.Components.Icon
+@inject flashcard.utils.FlashCardService FlashCardService
 @inject Microsoft.AspNetCore.Components.Authorization.AuthenticationStateProvider AuthenticationStateProvider
 @inject IHttpContextAccessor HttpContextAccessor
 @inject NavigationManager Navigation
@@ -41,6 +44,13 @@
                     <a href="/auth/signin" class="text-blue-500 hover:underline">Sign In</a>
                 </div>
             }
+            Your personal decks:
+            <div class="grid lg:grid-cols-3 md:grid-cols-2 grid-cols-1 gap-4">
+		        @foreach (var flashCard in filteredFlashCards)
+		        {
+			        <FlashCardComponent flashCard="flashCard" />
+		        }
+	        </div>
         </div>
     </div>
 </div>
