--- a/Components/Pages/Detail.razor
+++ b/Components/Pages/Detail.razor
@@ -1,6 +1,7 @@
 @page "/decks/{Slug}"
 @layout flashcard.Components.Layout.DetailLayout
 @inject flashcard.utils.FlashCardService FlashCardService
+@inject IJSRuntime JSRuntime
 @rendermode InteractiveServer
 
 <PageTitle>@deckData?.Title</PageTitle>
