--- a/Components/Pages/Create.razor
+++ b/Components/Pages/Create.razor
@@ -1,7 +1,9 @@
 @page "/create"
+@attribute [Authorize]
 @using Microsoft.AspNetCore.Components.Authorization
 @using flashcard.model
 @using flashcard.utils
+@using Microsoft.AspNetCore.Authorization
 @inject FlashCardService FlashCardService
 @inject AuthenticationStateProvider AuthenticationStateProvider
 @rendermode InteractiveServer
